--- a/src/pages/StartPage/StartPage.module.scss
+++ b/src/pages/StartPage/StartPage.module.scss
@@ -31,6 +31,7 @@
       font-size: 20px;
       margin-bottom: 20px;
       line-height: 33px;
+      text-align: justify;
     }
   }
   .imageBlock{
@@ -376,6 +377,7 @@
     gap: 25px;
     .content{
       padding-left: 30px;
+      padding-right: 30px;
       h2{
         font-size: 42px;
       }
