--- a/src/pages/StartPage/StartPage.module.scss
+++ b/src/pages/StartPage/StartPage.module.scss
@@ -99,6 +99,7 @@
       font-size: 20px;
       margin-bottom: 20px;
       line-height: 33px;
+      text-align: justify;
     }
     h4{
       margin-bottom: 5px;
@@ -433,6 +434,7 @@
       }
       p{
         font-size: 18px;
+        line-height: 28px;
       }
     }
   }
